kubernetes/apps/media/aurral/app/securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: aurral
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: aurral
  extAuth:
    http:
      backendRefs:
        - name: authelia
          namespace: auth
          port: 9091
      path: /api/authz/ext-authz
      headersToBackend:
        - Remote-User
        - Remote-Groups
        - Remote-Email
        - Remote-Name
